--- a/templates/index.html
+++ b/templates/index.html
@@ -35,11 +35,11 @@
       <!-- Section for Featured Image and Facts table -->
       <div class="row" id="mars-featured-image">
         <div class="col-md-8">
-          <h2>Featured Mars Image</h2>
+          <h3>Featured Mars Image</h3>
 
           <!-- if images is False/None/non-existent, then default to error message -->
           <img
-            src="{{mars.featured_image | default('static/images/error.png', true) }}"
+            src="{{  mars.featured_image | default('static/images/error.png', true) }}"
             class="img-responsive"
             alt="Responsive image"
           />
@@ -48,22 +48,20 @@
         <div class="col-md-4">
           <!-- Mars Facts -->
           <div class="row" id="mars-facts">
-            <h4>Mars Facts</h4>
+            <h3>Mars Facts</h3>
             {{ mars.facts | safe }}
           </div>
         </div>
       </div>
-
       <!-- Section for Mars Hemispheres -->
       <div class="row" id="mars-hemispheres">
         <div class="page-header">
           <h2 class="text-center">Mars Hemispheres</h2>
         </div>
-
-        {% for hemisphere in mars.hemispheres %}
-        <div class="col-md-6">
+        {% for hemisphere in mars.image_list %}
+        <div class="col-md-3">
           <div class="thumbnail">
-            <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...">
+            <img src="{{hemisphere.img_url }}" alt="...">
             <div class="caption">
               <h3>{{hemisphere.title}}</h3>
             </div>
